--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gamer Zone</title>
 </head>
 <body>
+    <nav>
+        <div class="nav-container">
+            <div class="nav-left">
+                <img src="images/Frame.png" alt="">
+                <p><span>G</span>ammer</p>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <li>About Us</li>
+                    <li>Developers</li>
+                    <li>Follow Us On
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     
 </body>
 </html>
