nav section created

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>Gamer Zone</title>
 </head>
 <body>
@@ -15,10 +17,10 @@
                 <p><span>G</span>ammer</p>
             </div>
             <div class="nav-right">
-                <ul>
+                <ul class="menu-items">
                     <li>About Us</li>
                     <li>Developers</li>
-                    <li>Follow Us On
+                    <li class="social-icons-menu">Follow Us On
                         <i class="fa-brands fa-youtube"></i>
                         <i class="fa-brands fa-tiktok"></i>
                     </li>
