--- a/index.html
+++ b/index.html
@@ -56,9 +56,26 @@
     
         </div>
     </section>
+    <!-- Banner design ends here -->
 
+    <!-- Gamer sectoin starts here -->
+    <section class="gamer-section">
+        <div class="gamer-container">
+            <div class="gamer-left">
+                <img src="images/pngwing4.png" alt="">
+            </div>
+            <div class="gamer-right">
+                <div class="right-flex">
+                    <h3>We are gamer</h3>
+                <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn-primary gamer-btn">Know More</button>
+                <h4><span>Our purpose...</span><br>“unleash the gamer in everyone”</h4>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <!-- Banner design endss here -->
+    <!-- Gamer sectoin ends here -->
     
 </body>
 </html>
