play instantly section added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="gamer-right">
                 <h3>We are gamer</h3>
-                <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <p class="normal-paragraph">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                 <button class="btn-primary gamer-btn">Know More</button>
                 <h4><span>Our purpose...</span><br>“unleash the gamer in everyone”</h4>
             </div>
@@ -76,8 +76,8 @@
     <!-- Gamer section ends here -->
 
     <!-- funny game section starts here -->
-
-    <section class="funny-game-sectoin">
+<!-- 
+    <section class="funny-game-section">
         <div class="funny-game-container">
             <div class="overlay-image-colum">
                 <div class="overlay-image-section">
@@ -114,9 +114,30 @@
 
         </div>
 
-    </section>    
+    </section>     -->
 
         <!-- funny game section ends here -->
+
+        <!-- play instantly section starts here  -->
+
+    <section class="play-instantly-section">
+        <div class="play-instantly-container">
+            <div class="play-inst-left">
+                <h3><span style="color:#FF42A5; text-align: right; line-height: 0; margin: 0;">Play Instantly,</span> <br>No Downloads <br>No Installs.</h3>
+                <p class="normal-paragraph">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-inst-right">
+                <div class="test-class">
+                    <div class="main-play-inst-img"><img src="images/Rectangle55.png" alt=""></div>
+                </div>
+
+                    
+                <div class="secondary-image"><img src="images/Rectangle66.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+
+        <!-- play instantly section ends here  -->
 
 </body>
 </html>
