--- a/index.html
+++ b/index.html
@@ -160,5 +160,36 @@
         
         <!-- bottom grid section ends here  -->
 
+        <!-- footer section starts here  -->
+        <footer class="footer-section">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="images/Frame.png" alt="">
+                    <p><span>G</span>amer</p>
+                </div>
+                <div class="footer-menu">
+                    <li>Our Story</li>
+                    <li>Games</li>
+                    <li>Web Games</li>
+                    <li>Careers</li>
+                    <li>Support</li>
+                    <li>>My Account</li>
+                </div>
+                <div class="social-icon">
+                    <img src="svg-icons/twitter 1.svg" alt="">
+                    <img src="svg-icons/facebook 1.svg" alt="">
+                    <img src="svg-icons/instagram 1.svg" alt="">
+                </div>
+                <div class="footer-menu">
+                    <li>Terms and Conditions</li>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li>Privacy Settings</li>
+                </div>
+                <p class="normal-paragraph">Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </footer>
+        <!-- footer section ends here  -->
+
 </body>
 </html>
