bonus hover section added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Gamer section ends here -->
 
     <!-- funny game section starts here -->
-<!-- 
+
     <section class="funny-game-section">
         <div class="funny-game-container">
             <div class="overlay-image-colum">
@@ -93,28 +93,37 @@
                 
                 <div class="overlay-image-section">
                     <div class="hover-image-style">
-                        <img src="images/Rectangle4.png" alt="">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <div class="overlay-items">
+                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
+                        </div>
                     </div>
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="overlay-image-section">
                     <div class="hover-image-style">
-                        <img src="images/Rectangle4.png" alt="">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <div class="overlay-items">
+                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
+                        </div>
                     </div>
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>Breaking game records like OG</p>
                 </div>
                 <div class="overlay-image-section">
                     <div class="hover-image-style">
-                        <img src="images/Rectangle4.png" alt="">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <div class="overlay-items">
+                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
+                        </div>
                     </div>
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
 
             </div>
 
         </div>
 
-    </section>     -->
+    </section>    
 
         <!-- funny game section ends here -->
 
@@ -173,14 +182,14 @@
                     <li>Web Games</li>
                     <li>Careers</li>
                     <li>Support</li>
-                    <li>>My Account</li>
+                    <li>My Account</li>
                 </div>
                 <div class="social-icon">
                     <img src="svg-icons/twitter 1.svg" alt="">
                     <img src="svg-icons/facebook 1.svg" alt="">
                     <img src="svg-icons/instagram 1.svg" alt="">
                 </div>
-                <div class="footer-menu">
+                <div class="footer-menu-last">
                     <li>Terms and Conditions</li>
                     <li>Privacy Policy</li>
                     <li>Cookie Policy</li>
