--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         
                     </div>
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    <p>No Download. No Installs. <br>Play games Instantly on Gamer.</p>
                 </div>
                 
                 <div class="overlay-image-section">
@@ -98,7 +98,7 @@
                             <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
                         </div>
                     </div>
-                    <p>Did you score? #unblockedgames #school</p>
+                    <p>Did you score? <br>#unblockedgames #school</p>
                 </div>
                 <div class="overlay-image-section">
                     <div class="hover-image-style">
@@ -107,7 +107,7 @@
                             <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
                         </div>
                     </div>
-                    <p>Breaking game records like OG</p>
+                    <p>Breaking game records <br>like OG</p>
                 </div>
                 <div class="overlay-image-section">
                     <div class="hover-image-style">
@@ -116,7 +116,7 @@
                             <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
                         </div>
                     </div>
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                    <p>Busted gaming on school laptop, <br>but you are still lit.</p>
                 </div>
 
             </div>
