--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img src="images/pngwing4.png" alt="">
             </div>
             <div class="gamer-right">
-                <h3>We are gamer</h3>
+                <h3 class="gradiant-color">We are gamer</h3>
                 <p class="normal-paragraph">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
                 <button class="btn-primary gamer-btn">Know More</button>
                 <h4><span>Our purpose...</span><br>“unleash the gamer in everyone”</h4>
@@ -75,59 +75,75 @@
 
     <!-- Gamer section ends here -->
 
-    <!-- funny game section starts here -->
+    <!-- online game section starts here -->
 
-    <section class="funny-game-section">
-        <div class="funny-game-container">
-            <div class="overlay-image-colum">
-                <div class="overlay-image-section">
-                    <div class="hover-image-style">
-                        <img src="images/Rectangle4.png" alt="">
-                        <div class="overlay-items">
-                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
+    <section class="online-game-section">
+        <div class="online-game-container">
+            <div class="online-game-text-container">
+                <h3>Online Games <span class="gradiant-color">Funny Videos</h3>
+                    <p class="normal-paragraph">A Collection of Hilarious Videos to Brighten Your Day</p>    
+            </div>    
+            <div class="online-game-image-container">
+                <div class="game-image-text-column">
+                    <div class="image-div">
+                        <div class="game-image-overlay"><img src="images/Rectangle4.png" alt="">
+                            <div class="span-class">
+                                <i class="fa-regular fa-circle-play"></i> 
+                                <span>Watch Now</span>
+                            </div> 
                         </div>
-                        
+                    </div>                    
+                    <div class="text-div">
+                        <p>No Download. No Installs. <br>Play games Instantly on Gamer.</p>
                     </div>
-                    <p>No Download. No Installs. <br>Play games Instantly on Gamer.</p>
-                </div>
-                
-                <div class="overlay-image-section">
-                    <div class="hover-image-style">
-                        <img src="images/Rectangle 5.png" alt="">
-                        <div class="overlay-items">
-                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
-                        </div>
-                    </div>
-                    <p>Did you score? <br>#unblockedgames #school</p>
-                </div>
-                <div class="overlay-image-section">
-                    <div class="hover-image-style">
-                        <img src="images/Rectangle 7.png" alt="">
-                        <div class="overlay-items">
-                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
-                        </div>
-                    </div>
-                    <p>Breaking game records <br>like OG</p>
-                </div>
-                <div class="overlay-image-section">
-                    <div class="hover-image-style">
-                        <img src="images/Rectangle 6.png" alt="">
-                        <div class="overlay-items">
-                            <span><i class="fa-regular fa-circle-play"></i> Watch Now</span>
+                </div>   
+                <div class="game-image-text-column">
+                    <div class="image-div">
+                        <div class="game-image-overlay"><img src="images/Rectangle 5.png" alt="">
+                            <div class="span-class">
+                                <i class="fa-regular fa-circle-play"></i> 
+                                <span>Watch Now</span>
+                            </div> 
                         </div>
                     </div>
-                    <p>Busted gaming on school laptop, <br>but you are still lit.</p>
+                    <div class="text-div">
+                        <p>Did you score? #unblockedgames <br>#school</p>
+                    </div>
                 </div>
-
-            </div>
-
+                <div class="game-image-text-column">
+                    <div class="image-div">
+                        <div class="game-image-overlay"><img src="images/Rectangle 7.png" alt="">
+                            <div class="span-class">
+                                <i class="fa-regular fa-circle-play"></i> 
+                                <span>Watch Now</span>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="text-div">
+                        <p>Breaking game records <br>like OG</p>
+                    </div>
+                </div>
+                <div class="game-image-text-column">
+                    <div class="image-div">
+                        <div class="game-image-overlay"><img src="images/Rectangle 6.png" alt="">
+                            <div class="span-class">
+                                <i class="fa-regular fa-circle-play"></i> 
+                                <span>Watch Now</span>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="text-div">
+                        <p>Busted gaming on school laptop, <br>but you are still lit.</p>
+                    </div>
+                </div>       
+            </div>   
         </div>
+    </section>
+  
 
-    </section>    
+    <!-- online game section ends here -->
 
-        <!-- funny game section ends here -->
-
-        <!-- play instantly section starts here  -->
+    <!-- play instantly section starts here  -->
 
     <section class="play-instantly-section">
         <div class="play-instantly-container">
@@ -199,6 +215,7 @@
             </div>
         </footer>
         <!-- footer section ends here  -->
+
 
 </body>
 </html>
