final css added

--- a/index.html
+++ b/index.html
@@ -166,18 +166,19 @@
 
         <!-- bottom grid section starts here  -->
 
+
         <section class="bottom-grid-section">
             <div class="bottom-grid-container">
                 <div class="bottom-grid">
-                    <li><a href=""><img src="images/Rectangle 11.png" alt=""><span>Action Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 12.png" alt=""><span>Adventure Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 13.png" alt=""><span>Arcade Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 14.png" alt=""><span>Educational Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 15.png" alt=""><span>Word Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 16.png" alt=""><span>Role Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 17.png" alt=""><span>Music Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 18.png" alt=""><span>Puzzle Games</span></a></li>
-                    <li><a href=""><img src="images/Rectangle 19.png" alt=""><span>Strategy Games</span></a></li>
+                    <li><img src="images/Rectangle 11.png" alt=""><span>Action Games</span></li>
+                    <li><img src="images/Rectangle 12.png" alt=""><span>Adventure Games</span></li>
+                    <li><img src="images/Rectangle 13.png" alt=""><span>Arcade Games</span></li>
+                    <li><img src="images/Rectangle 14.png" alt=""><span>Educational Games</span></li>
+                    <li><img src="images/Rectangle 15.png" alt=""><span>Word Games</span></li>
+                    <li><img src="images/Rectangle 16.png" alt=""><span>Role Games</span></li>
+                    <li><img src="images/Rectangle 17.png" alt=""><span>Music Games</span></li>
+                    <li><img src="images/Rectangle 18.png" alt=""><span>Puzzle Games</span></li>
+                    <li><img src="images/Rectangle 19.png" alt=""><span>Strategy Games</span></li>
                 </div>
             </div>
             
